--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
     "eventsource": "^2.0.2",
-    "pocketbase": "^0.21.0"
+    "pocketbase": "^0.21.0",
+    "resend": "^3.1.0"
   }
 }
