--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,10 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on:
+      - self-hosted
 
     steps:
-    - uses: actions/checkout@v2
-    - run: npm install
-    - run: pm2 restart 0
+      - uses: actions/checkout@v2
+      - run: npm install
+      - run: pm2 restart 0
