--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
     "eventsource": "^2.0.2",
-    "pocketbase": "^0.21.0",
-    "resend": "^3.1.0"
+    "nodemailer": "^6.9.15",
+    "pocketbase": "^0.21.0"
   }
 }
